--- a/index.html
+++ b/index.html
@@ -31,19 +31,33 @@
        <img src="https://via.placeholder.com/300x375" alt="" srcset="">
        <img src="https://via.placeholder.com/300x375" alt="" srcset="">
         </section>
-        <section id='bottom'>
+        <section id='bottom1'>
             <img src="https://via.placeholder.com/480x400" alt="" srcset="">
-            <article>
+        </section>
+            <section id='bottom2'>
                 <h3> Featured Section Heding </h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas maxime sed nam doloremque molestiae tenetur, dolor distinctio nemo qui nostrum minima sint iusto error laboriosam deleniti perferendis impedit ipsa quae?
+            <p id ='up'>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas maxime sed nam doloremque molestiae tenetur, dolor distinctio nemo qui nostrum minima sint iusto error laboriosam deleniti perferendis impedit ipsa quae?
            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
+           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas maxime sed nam doloremque molestiae tenetur, dolor distinctio nemo qui nostrum minima sint iusto error laboriosam deleniti perferendis impedit ipsa quae?
+           Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
+           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas maxime sed nam doloremque molestiae tenetur, dolor distinctio nemo qui nostrum minima sint iusto error laboriosam deleniti perferendis impedit ipsa quae?
+           Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
+           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas maxime sed nam doloremque molestiae tenetur, dolor distinctio nemo qui nostrum minima sint iusto error laboriosam deleniti perferendis impedit ipsa quae?
+           Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
+           orem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas maxime sed nam doloremque molestiae tenetur, dolor distinctio nemo qui nostrum minima sint iusto error laboriosam deleniti perferendis impedit ipsa quae?
+           Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
+           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas maxime sed nam doloremque molestiae tenetur, dolor distinctio nemo qui nostrum minima sint iusto error laboriosam deleniti perferendis impedit ipsa quae?
+           Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
+           L
             </p>
-        </article>
+            <a href="#up">Call To Action </a>
+        
         </section>
     </main>
     <footer>
 
     </footer>
+
 
     <script src="js/apps.js"></script>
 </body>
