--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <img  class ='topp' src= "https://via.placeholder.com/200x70" alt="">
+        <img  class ='topp' src= "https://via.placeholder.com/200x70/000000%20C/O%20https://placeholder.com/" alt="">
         <nav>
             <ul>
                 <li><a href="">Nav item 1</a></li>
@@ -24,19 +24,19 @@
     </header>
     <main>
         <section id='top'>
-            <img src="https://via.placeholder.com/960x450" alt="" srcset="">
+            <img src="https://via.placeholder.com/960x450/000000%20C/O%20https://placeholder.com/" alt="" srcset="">
         </section>
         <section id='middel'>
-       <img src="https://via.placeholder.com/300x375" alt="" srcset="">
-       <img src="https://via.placeholder.com/300x375" alt="" srcset="">
-       <img src="https://via.placeholder.com/300x375" alt="" srcset="">
+       <img src="https://via.placeholder.com/300x375/000000%20C/O%20https://placeholder.com/" alt="" srcset="">
+       <img src="https://via.placeholder.com/300x375/000000%20C/O%20https://placeholder.com/" alt="" srcset="">
+       <img src="https://via.placeholder.com/300x375/000000%20C/O%20https://placeholder.com/" alt="" srcset="">
         </section>
         <section id='bottom1'>
-            <img src="https://via.placeholder.com/480x400" alt="" srcset="">
+            <img src="https://via.placeholder.com/480x400/000000%20C/O%20https://placeholder.com/" alt="" srcset="">
         </section>
             <section id='bottom2'>
                 <h3> Featured Section Heding </h3>
-            <p id ='up'>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas maxime sed nam doloremque molestiae tenetur, dolor distinctio nemo qui nostrum minima sint iusto error laboriosam deleniti perferendis impedit ipsa quae?
+            <p id ='abc.html'>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas maxime sed nam doloremque molestiae tenetur, dolor distinctio nemo qui nostrum minima sint iusto error laboriosam deleniti perferendis impedit ipsa quae?
            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas maxime sed nam doloremque molestiae tenetur, dolor distinctio nemo qui nostrum minima sint iusto error laboriosam deleniti perferendis impedit ipsa quae?
            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
@@ -50,7 +50,9 @@
            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
            L
             </p>
-            <a href="#up">Call To Action </a>
+            <a href="#abc.html"
+   onMouseOver="this.style.color='#0F0'"
+   onMouseOut="this.style.color='#00F'" >Cell To Actiont</a>
         
         </section>
     </main>
